--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "course-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,11 +21,16 @@
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
+    "gulp-sass": "^3.1.0",
     "gulp-watch": "^5.0.0",
+    "normalize-scss": "^7.0.1",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "hbs": "^4.0.1",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0"
   }
